# EletroSolver-GUI

./: .gitignore  CLAUDE.md  Dockerfile  EletroSolver.py  Faltas.py  README.md  pyproject.toml  spec.md
exemplos/: 3-barras.json  5-barras.json
gui/: __init__.py  campos.py  casos.py  componentes.py  diagrama.py  estado.py  graficos.py  layout.py  main.py  solver.py  workspace.py
gui/paginas/: __init__.py  galeria.py  inicio.py  sistema.py
tests/: conftest.py  test_campos.py  test_casos.py  test_componentes_select.py  test_diagrama.py  test_estado.py  test_graficos.py  test_integracao.py  test_paginas.py  test_solver.py  test_workspace_ligacao.py
